# rhel2bootc

./: .gitignore  Containerfile  GAPS.md  README.md  design.md  pyproject.toml  rhel2bootc-design.md  run-yoinkc.sh  yoinkc-build  yoinkc-refine
docs/specs/: 2026-03-12-tarball-first-output-design.md
manifests/rhel/9.6/: minimal.json  (+1 more)
src/rhel2bootc/: __init__.py  __main__.py  baseline.py  cli.py  git_github.py  pipeline.py  redact.py  schema.py
src/yoinkc/: __main__.py  _util.py  baseline.py  cli.py  entitlement.py  executor.py  git_github.py  pipeline.py  redact.py  schema.py  validate.py
tests/: conftest.py  test_baseline.py  test_cli.py  test_config_exclusions.py  test_fleet_cli.py  test_fleet_loader.py  test_fleet_merge.py  test_fleet_schema.py  test_inspectors.py  test_integration.py  test_plan_items.py  test_redact.py  test_renderer_outputs.py  test_renderers.py  test_triage.py  test_validate_git_secrets.py  test_yoinkc_refine.py
tests/fixtures/: base_image_packages.txt  comps_minimal.xml  comps_server_core.xml  dnf_history_info_4.txt  dnf_history_list.txt  ip_route_output.txt  lsmod_output.txt  pip_list_analytics.txt  pip_list_webapp.txt  podman_inspect_output.json  podman_ps_output.json  readelf_go_sections.txt  readelf_rust_dynamic.txt  readelf_rust_sections.txt  rpm_qa_output.txt  rpm_qla_output.txt  rpm_va_output.txt  semanage_boolean_l_output.txt  semanage_port_l_C_output.txt  semodule_l_output.txt  systemctl_list_unit_files.txt
tests/output/: Containerfile  README.md  audit-report.md  kickstart-suggestion.ks  report.html  secrets-review.md
(+78 files in other folders)
